refactor: divide the controller
